# OSGAssembly

./: CMakeLists.txt  README.md  assembly.h  assemblytree.cpp  assemblytree.h  component.cpp  component.h  globalphysics.cpp  globalphysics.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  osgAssembly.pro  osgAssembly.pro.user.2bd5f8f  osgimplementation.cpp  osgimplementation.h  osginclude.h  osgio.h  osglogger.cpp  osglogger.h  physicsjoints.cpp  physicsjoints.h  physicsjoints.h.autosave  qtosgwidget.cpp  qtosgwidget.h
